WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289277
Crash in WebChromeClient::clearPlaybackControlsManager due to RELEASE_ASSERT in WeakRef::get()
https://bugs.webkit.org/show_bug.cgi?id=289277
Summary
Crash in WebChromeClient::clearPlaybackControlsManager due to RELEASE_ASSERT ...
Andy Estes
Reported
2025-03-06 13:43:36 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2025-03-06 13:43:37 PST
<
rdar://problem/145885207
>
Andy Estes
Comment 2
2025-03-06 13:49:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/42033
EWS
Comment 3
2025-03-06 22:03:17 PST
Committed
291754@main
(0d4da81abfdd): <
https://commits.webkit.org/291754@main
> Reviewed commits have been landed. Closing PR #42033 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug