Crash in WebChromeClient::clearPlaybackControlsManager due to RELEASE_ASSERT in WeakRef::get() https://bugs.webkit.org/show_bug.cgi?id=289277 rdar://145885207

Reviewed by Chris Dumez.

WebChromeClient is owned by its WebCore::Page but stores a WeakRef to a WebPage. If the
WebCore::Page outlives its WebPage then code that accesses this WeakRef will crash due to a
RELEASE_ASSERT in WeakRef::get() asserting that the underlying weak pointer is non-null. Since
WebChromeClient::clearPlaybackControlsManager is called on a timer, it may be called after its
WebPage has been destroyed but before its WebCore::Page has been.

Resolved this by changing WebChromeClient::m_page from a WeakRef to a WeakPtr, then null-checking
m_page before accessing it in WebChromeClient::clearPlaybackControlsManager. In a future change we
should null-check all accesses to m_page in WebChromeClient.

* Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::protectedPage const):
(WebKit::WebChromeClient::clearPlaybackControlsManager):
* Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.h:

Canonical link: https://commits.webkit.org/291754@main